cmake_minimum_required(VERSION 3.3)
project(Rythem)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    liveload/ryliveload.cpp
    liveload/ryliveload.h
    proxy/proxyautoconfig.cpp
    proxy/proxyautoconfig.h
    proxy/ryconnection.cpp
    proxy/ryconnection.h
    proxy/rypipedata.cpp
    proxy/rypipedata.h
    proxy/ryproxyserver.cpp
    proxy/ryproxyserver.h
    proxy/rywinhttp.cpp
    proxy/rywinhttp.h
    quazip/crypt.h
    quazip/ioapi.h
    quazip/JlCompress.cpp
    quazip/JlCompress.h
    quazip/qioapi.cpp
    quazip/quaadler32.cpp
    quazip/quaadler32.h
    quazip/quachecksum32.h
    quazip/quacrc32.cpp
    quazip/quacrc32.h
    quazip/quazip.cpp
    quazip/quazip.h
    quazip/quazip_global.h
    quazip/quazipfile.cpp
    quazip/quazipfile.h
    quazip/quazipfileinfo.h
    quazip/quazipnewinfo.cpp
    quazip/quazipnewinfo.h
    quazip/unzip.c
    quazip/unzip.h
    quazip/zip.c
    quazip/zip.h
    rule/ryrule.cpp
    rule/ryrule.h
    rule/ryrulegroup.cpp
    rule/ryrulegroup.h
    rule/ryrulemanager.cpp
    rule/ryrulemanager.h
    rule/ryruleproject.cpp
    rule/ryruleproject.h
    rule/ryrulereplacecontent.cpp
    rule/ryrulereplacecontent.h
    widget/rytabwidget.cpp
    widget/rytabwidget.h
    widget/rywebview.cpp
    widget/rywebview.h
    zlib/crc32.h
    zlib/deflate.h
    zlib/gzguts.h
    zlib/inffast.h
    zlib/inffixed.h
    zlib/inflate.h
    zlib/inftrees.h
    zlib/trees.h
    zlib/zconf.h
    zlib/zlib.h
    zlib/zutil.h
    composer.cpp
    composer.h
    main.cpp
    mainwindow.cpp
    mainwindow.h
    proxysetting.c
    qnetworkproxyfactoryexendforpac.cpp
    qnetworkproxyfactoryexendforpac.h
    ryconnectiontableview.cpp
    ryconnectiontableview.h
    rymimedata.h
    rytablemodel.cpp
    rytablemodel.h
    rytablesortfilterproxymodel.cpp
    rytablesortfilterproxymodel.h
    ryupdatechecker.cpp
    ryupdatechecker.h
    singleapplication.cpp
    singleapplication.h
    waterfallwindow.cpp
    waterfallwindow.h)

add_executable(Rythem ${SOURCE_FILES})